--- a/package.json
+++ b/package.json
@@ -24,11 +24,17 @@
     "@nestjs/common": "^7.1.3",
     "@nestjs/core": "^7.1.3",
     "@nestjs/platform-express": "^7.1.3",
+    "@nestjs/swagger": "^4.5.10",
     "@nestjs/typeorm": "^7.1.0",
+    "@nestjsx/crud": "^4.6.2",
+    "@nestjsx/crud-request": "^4.6.2",
+    "@nestjsx/crud-typeorm": "^4.6.2",
+    "class-transformer": "^0.2.3",
     "mysql": "^2.18.1",
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.2",
     "rxjs": "^6.5.5",
+    "swagger-ui-express": "^4.1.4",
     "typeorm": "^0.2.25",
     "typeorm-model-generator": "^0.4.2"
   },
